// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index snapshot default 1`] = `
<div>
  <div>
    <input
      accept="image/*"
      style="display: none;"
      type="file"
    />
    <div
      style="padding:8px;border:3px solid #aaa;border-radius:8px;background-color:#f4f4f4;overflow:hidden;position:relative;width:124px;height:124px;"
    >
      <svg
        style="overflow: visible; width: 100%; height: 100%; display: none;"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      />
      <button
        data-key="clip-f_drop"
        style="padding:0;margin:0;border:none;background-color:transparent;width:100%;height:100%;cursor:pointer;"
      >
        <svg
          style="overflow:visible;width:100%;height:100%;"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="translate(25,25)"
          >
            <rect
              fill="none"
              height="50"
              rx="4"
              ry="4"
              stroke="#aaa"
              stroke-width="2"
              width="50"
            />
            <g
              fill="#aaa"
            >
              <path
                d="M0 45L0 40L15 25L20 30L30 20L50 40L50 45z"
              />
              <circle
                cx="10"
                cy="15"
                r="4"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        data-key="clip-f_delete"
        style="padding: 0px; margin: 0px; background-color: transparent; position: absolute; top: 4px; right: 4px; width: 20px; height: 20px; border-radius: 100%; cursor: pointer; display: none;"
      >
        <svg
          style="overflow:visible;width:100%;height:100%;"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="50"
              stroke="#aaa"
              stroke-width="10"
            />
            <path
              d="M24 24L76 76M24 76L76,24"
              fill="none"
              stroke="#aaa"
              stroke-width="12"
            />
          </g>
        </svg>
      </button>
      <p
        data-key="clip-f_error"
        style="padding:4px 8px;margin:0;border:none;background-color:red;position:absolute;bottom:0;left:0;right:0;color:white;font-size:16px;word-break:break-all;cursor:pointer;transition:0.5s all;transform:translateY(100%);"
      />
    </div>
  </div>
</div>
`;

exports[`index snapshot image loaded 1`] = `
<div>
  <div>
    <input
      accept="image/*"
      style="display: none;"
      type="file"
    />
    <div
      style="padding:8px;border:3px solid #aaa;border-radius:8px;background-color:#f4f4f4;overflow:hidden;position:relative;width:124px;height:124px;"
    >
      <svg
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 -50 200 200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <image
          height="100"
          href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAABkBAMAAAAxqGI4AAAAG1BMVEUAAAD///8/Pz+/v7/f399/f3+fn58fHx9fX18kPjWPAAAACXBIWXMAAA7EAAAOxAGVKw4bAAABi0lEQVRoge2UMU/DMBCFjySNM8LA7tJIrBWtEGMJlGbsgMQKUtlDWzFbIj+cs88hoaVSYzq+T4ot6z35xbmLiQAAAAAAAAAAAACO4krbUV25xVofcK27rr5E08n9kqfHyZxX+cN0uet40z+Cd/Um1aSeeBNNm1eKClK3O4bNikO8IK4whhWVPJWUGHJPBzVPNDWCuMJIdDbj6YtqHrPxLy03NkQE7wojNqmtxAe986jOeRjwxvRptReyISJ4VxhnVWx4Sqo7u1qQqwEp/2FsiAjeFRZSu40o1oVd3diBS7w1bYgI3hUWUsrrxcYeQt46WzQHcSEieFdQxmC8H0J13Wx2mpC62v9cNLhs5JN8rmjhX69TeKLtqinwSQrPNabdFubWyopOyH9bOHMtOyP7m+XU/IzcWrVuQ0TwrgCe3fFtKxWUGNnT/SNR0YZ4QVz9SaUEuXEXZOkvyJQ3pVEb4gVx9Wd4wSztjW8v8dEfV707mgjeFYy6dtP6UO+I4F0AAAAAAAAAAAAAR/ENV6VF0qC6xGQAAAAASUVORK5CYII="
          width="200"
          x="0"
          y="0"
        />
        <g
          transform="translate(0, -50)"
        >
          <rect
            fill="none"
            height="200"
            stroke="red"
            stroke-width="4.838709677419354"
            width="200"
            x="0"
            y="0"
          />
          <g>
            <g
              stroke="none"
              style="cursor:pointer"
              transform="scale(1.6129032258064515)"
            >
              <circle
                fill="red"
                r="8"
              />
              <path
                d="M-6-2L-6 2L6 2L6-2zM-2-6L-2 6L2 6L2-6z"
                fill="#fff"
              />
            </g>
          </g>
          <g
            transform="translate(200, 200)"
          >
            <g
              stroke="none"
              style="cursor:pointer"
              transform="scale(1.6129032258064515) rotate(45)"
            >
              <circle
                fill="red"
                r="8"
              />
              <path
                d="M-2-2-2-5L-7 0L-2 5L-2 2L2 2L2 5L7 0L2-5L2-2z"
                fill="#fff"
              />
            </g>
          </g>
        </g>
      </svg>
      <button
        data-key="clip-f_drop"
        style="padding: 0px; margin: 0px; background-color: transparent; width: 100%; height: 100%; cursor: pointer; display: none;"
      >
        <svg
          style="overflow:visible;width:100%;height:100%;"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="translate(25,25)"
          >
            <rect
              fill="none"
              height="50"
              rx="4"
              ry="4"
              stroke="#aaa"
              stroke-width="2"
              width="50"
            />
            <g
              fill="#aaa"
            >
              <path
                d="M0 45L0 40L15 25L20 30L30 20L50 40L50 45z"
              />
              <circle
                cx="10"
                cy="15"
                r="4"
              />
            </g>
          </g>
        </svg>
      </button>
      <button
        data-key="clip-f_delete"
        style="padding: 0px; margin: 0px; background-color: transparent; position: absolute; top: 4px; right: 4px; width: 20px; height: 20px; border-radius: 100%; cursor: pointer;"
      >
        <svg
          style="overflow:visible;width:100%;height:100%;"
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="50"
              stroke="#aaa"
              stroke-width="10"
            />
            <path
              d="M24 24L76 76M24 76L76,24"
              fill="none"
              stroke="#aaa"
              stroke-width="12"
            />
          </g>
        </svg>
      </button>
      <p
        data-key="clip-f_error"
        style="padding:4px 8px;margin:0;border:none;background-color:red;position:absolute;bottom:0;left:0;right:0;color:white;font-size:16px;word-break:break-all;cursor:pointer;transition:0.5s all;transform:translateY(100%);"
      />
    </div>
  </div>
</div>
`;
